pages/services/beta-storage/0.2.0-beta/cli-references/dcos-storage-profile/dcos-storage-profile-deactivate/index.md
---
layout: layout.pug
navigationTitle: dcos storage profile deactivate
title: dcos storage profile deactivate
menuWeight: 0
notes: Code generated by docgen.go, DO NOT EDIT
enterprise: true
---
## dcos storage profile deactivate

Deactivate an active volume profile.

### Synopsis

Arguments:

    <name>     The name of the volume profile.

Profiles cannot be changed once they have been created (i.e., they are
immutable) and they also cannot be removed. Instead of removing volume profiles,
you can deactivate a volume profile. No new volumes can be associated with a
volume profile that has been deactivated.

You can reactivate a deactivated profile using the `reactivate` command.

```bash
dcos storage profile deactivate <name> [flags]
```

### Examples

1. Create a volume profile then deactivate it and try to create a volume of that profile:

```bash
# Create the 'safe' profile.
$ cat <<EOF | dcos storage profile create
{
    "name": "safe",
    "description": "Volumes backed by RAID-1 devices.",
    "spec": {
        "provider-selector": {
            "plugin": "lvm",
            "matches": {
                "labels": {"raid": "1"}
            }
        },
        "mount": {}
    }
}
EOF

# Create a volume from volume profile 'safe'.
$ dcos storage volume create my-volume-1 10G safe

# Deactivate the 'safe' volume profile.
$ dcos storage profile deactivate safe

# Try and create a new volume from volume profile 'safe'.
$ dcos storage volume create my-volume-2 10G safe
Error:(Conflict): Profile is not active.
```

### Options inherited from parent commands

```bash
  -h, --help   Help for this command.
```

### SEE ALSO

* [dcos storage profile](../)	 - Manage volume profiles.

